--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#008000</color>
     <color name="red">#FF0000</color>
+    <color name="Golg">	#FFD700</color>
     <color name="magnitude1">#4A7BA7</color>
     <!-- Magnitude circle color for an earthquake with magnitude between 2 and 3 -->
     <color name="magnitude2">#04B4B3</color>
